--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 	<script src="_/js/codeflask.min.js"></script>
 	<script src="_/js/gunzip.min.js"></script>
 	<script src="_/js/jszip.min.js"></script>
+	<script src="_/js/idb-keyval.js"></script>
 	<script src="_/js/buffer.js"></script>
+	<script src="_/js/html-to-image.js"></script>
+	<script src="_/js/dom-to-svg.js"></script>
 	<script src="_/js/javaDeserialize.js"></script>
 	<script src="_/js/beliefUpdate_worker.js"></script>
 	<script src="_/js/junctionTree_worker.js"></script>
@@ -77,7 +80,7 @@
 
 	body { font-size: 8pt; font-family: arial; }
 	.bnComponent { width: 100%; height: 100%; position: relative; display: flex; flex-direction: column;
-		font-size: 16px;
+		font-size: 12px;
 		--px: calc(1em / 12); --pt: calc(1em / 12); }
 	.bnview { width: 100%; height: 100%; position: relative; font-size: 100%; }
 
@@ -126,7 +129,7 @@
 	.node *[contenteditable] { display: block; }
 	
 	/** I'm not sure why I don't have it this way all the time ? **/
-	.node h6 { text-align: left; overflow: visible; white-space: normal; padding: 0.1em 0.5em 0.1em 0.4em; }
+	.node h6 { text-align: left; overflow: visible; white-space: pre-wrap; padding: 0.1em 0.5em 0.1em 0.4em; }
 
 	/** Node selection **/
 	.node.dconnected, .node.evidenceSetHighlight { box-shadow: 0 0 0 4px red; }
@@ -165,7 +168,9 @@
 	.node.ds_bareLabel h6 { overflow: visible; white-space: normal; }
 	/*.node.ds_bareLabel .hotSpotParent { display: none; }*/
 	.node.ds_bareLabel h6 { text-align: center; }
-	.node.ds_stacked { display: block; min-width: 130px; font-size: 0 !important; }
+	<!-- .node.ds_stacked .inner { width: 100%; grid-template-columns: auto; } -->
+	<!-- .node.ds_stacked .controlBar { grid-column: 1 / 2; } -->
+	.node.ds_stacked { display: block; width: 180px; }
 	.node.ds_stacked .states { display: flex; }
 	.node.ds_stacked .state :is(.stateName,.prob) { display: none; }
 	.node.ds_stacked .controlBar { font-size: 11px; }
@@ -266,6 +271,7 @@
 	.menu.bar { border-bottom: 1px solid #aaa; white-space: nowrap; }
 	.menu input[type=text] { padding: 1px; }
 	.menu .menuAction { min-height: 20px; }
+	.menu .menuAction.disabled { color: #aaa; }
 	.menu .menuAction hr { width: 100%; border: 0; border-top: solid 1px #ccc; }
 	.menu .menuAction.separator { background: white; min-height: 10px; padding: 0; }
 	.menuAction.checked { background-image: url(_/images/check.png); background-position: 2px 50%; background-size: 8px 8px;
