--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<!--
-	Copyright (c) 2014-2023 Steven Mascaro
+	Copyright (c) 2014-2025 Steven Mascaro
 
 	Permission is hereby granted, free of charge, to any person obtaining a copy
 	of this software and associated documentation files (the "Software"), to deal
@@ -140,7 +140,9 @@
 	.item.selected { /*outline: solid 3px rgba(0,50,255,0.6);*/ box-shadow: 0 0 3px 2px rgba(0,50,255,0.6); }
 	.rectSelect { position: absolute; z-index: 100; border: solid 1px blue; background: rgba(0,0,128,0.15); }
 	
-	path.dependency.selected { stroke: blue; }
+	.dependency .line { fill: none; }
+	.dependency.selected { stroke: blue; }
+	.dependencyClickArea.selected { stroke: rgb(0,0,255,0.1); }
 	.movePoint { fill: blue; stroke: none; }
 	
 	/** Flashing, to get user's attention **/
@@ -490,7 +492,7 @@
 	<style data-style="genie">
 	.bnview .netSvgCanvas { background-image: radial-gradient(circle at 15px 1px, #ddd 0.5px, transparent 0), radial-gradient(circle at 1px 15px, #ddd 0.5px, transparent 0);
 		background-size: 16px 2px, 2px 16px; min-height: 100%; min-width: 100%; }
-	.netSvgCanvas path.dependency { stroke: rgb(0,0,128); }
+	.netSvgCanvas .dependency { stroke: rgb(0,0,128); }
 	#arrowhead polyline { fill: rgb(0,0,128); }
 	.node { position: absolute; padding: 0 0; border-radius: 0; border: solid 1px rgb(0,0,128);
 		background: rgb(229,246,247); z-index: 1; font-family: arial; font-size: 9pt; width: max-content; }
